Bug 396833 - "ASSERTION: nsAppShell::Exit() called redundantly" on shutdown.  Convert the assertion to a warning because the problem doesn't really have any bad consequences, thus allowing assertions to be fatal (!) on the Mac debug tinderbox.  r+sr+a=roc