widget/src/cocoa/nsAppShell.mm
@@ -487,9 +487,10 @@ nsAppShell::Exit(void)
   // XPCOM shutdown notification that nsBaseAppShell has registered to
   // receive.  So we need to ensure that multiple calls won't break anything.
   // But we should also complain about it (since it isn't quite kosher).
-  NS_ASSERTION(!mTerminated, "nsAppShell::Exit() called redundantly");
-  if (mTerminated)
+  if (mTerminated) {
+    NS_WARNING("nsAppShell::Exit() called redundantly");
     return NS_OK;
+  }
 
   mTerminated = PR_TRUE;
 
